--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewAlarmActivity"></activity>
+        <receiver android:name=".AlarmReceiver" />
+
+        <service android:name=".RingtonePlayingService"
+            android:enabled="true">
+        </service>
     </application>
 
 </manifest>
